--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
-        <div class="social-container">
+        </div>
+        <div class="social-container-footer">
             <p class="footer-text-social-list">Social media</p>
             <ul class="social-list">
                 <li class="social-list-item">
@@ -361,7 +362,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    
     </footer>
 </body>
 </html>
