--- a/index.html
+++ b/index.html
@@ -274,35 +274,64 @@
             <h2 class="portfolio-section-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
+                    <div class="overlay">
                     <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                        Exotic Fruit Ecommerce App ·
+                        Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-portfolio">
                     <h3 class="portfolio-card-title">Banking App</h3>
                     <p class="portfolio-text">App</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="overlay">
                     <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                        Exotic Fruit Ecommerce App ·
+                        Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-portfolio">
                     <h3 class="portfolio-card-title">Cashless Payment</h3>
                     <p class="portfolio-text">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="overlay">
                     <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                        Exotic Fruit Ecommerce App ·
+                        Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-portfolio">
                     <h3 class="portfolio-card-title">Meditation App</h3>
                     <p class="portfolio-text">App</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="overlay">
                     <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-portfolio">
                     <h3 class="portfolio-card-title">Taxi Service</h3>
                     <p class="portfolio-text">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="overlay">
                     <img src="./images/screen-Illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                        Exotic Fruit Ecommerce App ·
+                        Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-portfolio">
                     <h3 class="portfolio-card-title">Screen Illustrations</h3>
                     <p class="portfolio-text">Design</p>
@@ -310,7 +339,13 @@
             
                 </li>
                 <li class="portfolio-item">
+                    <div class="overlay">
                     <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" />
+                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                        Exotic Fruit Ecommerce App ·
+                        Cloud Storage App
+                    </p>
+                    </div>
                     <div class="card-portfolio">
                     <h3 class="portfolio-card-title">Online Courses</h3>
                     <p class="portfolio-text">Marketing</p>
@@ -335,28 +370,28 @@
             <ul class="social-list">
                 <li class="social-list-item">
                     <a href="" class="social-list-link">
-                        <svg class="social-list-icons" width="16" height="16">
+                        <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list-item">
                     <a href="" class="social-list-link">
-                        <svg class="social-list-icons" width="16" height="16">
+                        <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list-item">
                     <a href="" class="social-list-link">
-                        <svg class="social-list-icons" width="16" height="16">
+                        <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list-item">
                     <a href="" class="social-list-link">
-                        <svg class="social-list-icons" width="16" height="16">
+                        <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
