hw4 one section

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <h2 class="portfolio-section-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
-                    <div class="overlay">
+                    <div class="section-image">
                     <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" />
                     <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                         Exotic Fruit Ecommerce App ·
@@ -287,7 +287,7 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <div class="overlay">
+                    <div class="section-image">
                     <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" />
                     <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                         Exotic Fruit Ecommerce App ·
@@ -300,7 +300,7 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <div class="overlay">
+                    <div class="section-image">
                     <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" />
                     <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                         Exotic Fruit Ecommerce App ·
@@ -313,7 +313,7 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <div class="overlay">
+                    <div class="section-image">
                     <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" />
                     <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App
@@ -325,7 +325,7 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <div class="overlay">
+                    <div class="section-image">
                     <img src="./images/screen-Illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
                     <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                         Exotic Fruit Ecommerce App ·
@@ -339,7 +339,7 @@
             
                 </li>
                 <li class="portfolio-item">
-                    <div class="overlay">
+                    <div class="section-image">
                     <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" />
                     <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
                         Exotic Fruit Ecommerce App ·
@@ -369,28 +369,28 @@
             <p class="footer-text-social-list">Social media</p>
             <ul class="social-list">
                 <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-list-item">
-                    <a href="" class="social-list-link">
+                    <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
