--- a/index.html
+++ b/index.html
@@ -367,29 +367,29 @@
         </div>
         <div class="social-container-footer">
             <p class="footer-text-social-list">Social media</p>
-            <ul class="social-list-footer">
-                <li class="social-list-item">
+            <ul class="social-list">
+                <li class="social-list-item-footer">
                     <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-list-item">
+                <li class="social-list-item-footer">
                     <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-list-item">
+                <li class="social-list-item-footer">
                     <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-list-item">
+                <li class="social-list-item-footer">
                     <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
