--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         </div>
         <div class="social-container-footer">
             <p class="footer-text-social-list">Social media</p>
-            <ul class="social-list">
+            <ul class="social-list-footer">
                 <li class="social-list-item-footer">
                     <a href="" class="social-list-link-footer">
                         <svg class="social-list-icons" width="24" height="24">
