--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             
                 <li class="team-item">
                     <img src="./images/danielwilson.jpg" alt="Daniel Wilson avatar" width="264" height="260" />
-                    < class="card-team">
+                    <div class="card-team">
                     <h3 class="team-card-title">Daniel Wilson</h3>
                     <p class="team-text">UI Designer</p>
                         <ul class="social-list">
